login feedback for users

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/user/user.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/user/user.component.html
@@ -19,6 +19,10 @@
     <mat-form-field>
       <input matInput type="password" placeholder="Password" name="password" [(ngModel)]="userToLogin.password">
     </mat-form-field>
+    
+    <p style="color:rgb(255, 238, 0)" *ngIf="wrongPassword"> Password incorrect </p>
+    <p style="color: red" *ngIf="wrongLogin"> User not found </p>
+
     <button mat-flat-button color="primary" (click)="loginUser()">Login</button>
   </div>
 
