--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/user/user.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/user/user.component.html
@@ -6,6 +6,33 @@
   <mat-form-field>
     <input matInput type="password" placeholder="Password" name="password" [(ngModel)]="userToRegister.password">
   </mat-form-field>
+  <mat-form-field>
+    <input matInput type="email" placeholder="email" name="email" [(ngModel)]="userEmail">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="text" placeholder="first name" name="first name" [(ngModel)]="firstName">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="text" placeholder="last name" name="last name" [(ngModel)]="lastName">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="text" placeholder="street" name="street" [(ngModel)]="street">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="text" placeholder="house number" name="house number" [(ngModel)]="houseNr">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="text" placeholder="zip code" name="zip code" [(ngModel)]="zipCode">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="text" placeholder="city" name="city" [(ngModel)]="city">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="date" placeholder="birthday" name="date of birth" [(ngModel)]="birthday">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="text" placeholder="phone number" name="phone number" [(ngModel)]="phoneNr">
+  </mat-form-field>
   <button mat-flat-button color="primary" (click)="registerUser()">Register</button>
   <p style="color:red" *ngIf="passwordTooShort"> Password too Short </p>
   <p style="color: red" *ngIf="noUpperCase"> Password does not contain Uppercase Character </p>
