--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
+<router-outlet></router-outlet>
+
+
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <span>ESE-2021 Frontend Scaffolding</span>
