--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/login/login.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<mat-card>
+  <h3>Login</h3>
+
+  <div *ngIf="!loggedIn">
+    <mat-form-field>
+      <input matInput type="text" placeholder="User Name" name="name" [(ngModel)]="userToLogin.username">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput type="password" placeholder="Password" name="password" [(ngModel)]="userToLogin.password">
+    </mat-form-field>
+    <p style="color:red" *ngIf="passwordWrong"> Password wrong</p>
+    <p style="color:red" *ngIf="userNameWrong"> Username not found</p>
+
+    <button mat-flat-button color="primary" (click)="loginUser()">Login</button>
+  </div>
+
+  <div *ngIf="loggedIn">
+    <button mat-flat-button color="warn" (click)="logoutUser()">Logout</button>
+  </div>
+</mat-card>
+
+<mat-card>
+  <h3>Secure Endpoints</h3>
+  <button mat-flat-button color="primary" (click)="accessUserEndpoint()">User Endpoint</button>
+  {{ endpointMsgUser }}
+  <hr>
+  <button mat-flat-button color="primary" (click)="accessAdminEndpoint()">Admin Endpoint</button>
+  {{ endpointMsgAdmin }}
+</mat-card>
