--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.html
@@ -1,15 +1,17 @@
-<router-outlet></router-outlet>
-
 
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>ESE-2021 Frontend Scaffolding</span>
+    <a routerLink="/home">ESE-2021 Frontend Scaffolding</a> <span class="example-spacer"></span> <a routerLink="/login">Login</a> <span class="example-spacer"> </span> <a routerLink="/register">Register </a>
   </mat-toolbar-row>
 </mat-toolbar>
+
+<router-outlet></router-outlet>
+
 
 <mat-tab-group>
   <mat-tab label="Todo List Example">
     <mat-card>
+      <p>not quite sure what this todo-list is even doing here</p>
       <mat-form-field>
         <input matInput placeholder="List Name" [(ngModel)]="newTodoListName" name="name">
       </mat-form-field>
@@ -23,16 +25,6 @@
       (delete)="deleteList($event)"
     ></app-todo-list>
   </mat-tab>
-
-  <mat-tab label="Login">
-    <app-login></app-login>
-  </mat-tab>
-
-  <mat-tab label="Register">
-    <app-register></app-register>
-  </mat-tab>
-
-
 
   <mat-tab *ngIf="loggedIn" label="Profile Page">
     Profile Page
