--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -1,2 +1,6 @@
-<p>post-feed works!</p>
-
+<div *ngFor="let post of postList">
+    <div>
+        {{post.title}}  {{post.description}}
+        <p> Hallo asdlkgaslökdhgöaslk</p>
+    </div>
+</div>
