changed crud for posts

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -12,14 +12,15 @@
         <button mat-flat-button color="primary" (click)="createPost()" [disabled]="newPostTitle === ''">Create new post</button>
     </p>
     <p *ngIf="!loggedIn">
-        <a routerLink="/login">Please Login to create Post</a>
+        <a routerLink="/login">Please log in to create Post</a>
     </p>
-   
-  </mat-card>
+
+</mat-card>
+
+
 <div *ngFor="let post of postList">
     <div>
         {{post.title}}  {{post.description}}
         <p> Hallo asdlkgaslökdhgöaslk</p>
     </div>
-    <button *ngIf="user != null && user.userId === post.userId " mat-flat-button color="warn" (click)="deletePost(post)">delete post</button>
 </div>
