started post component html

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -19,8 +19,6 @@
 
 
 <div *ngFor="let post of postList">
-    <div>
-        {{post.title}}  {{post.description}}
-        <p> Hallo asdlkgaslökdhgöaslk</p>
-    </div>
+      <app-post [post]="post">
+    </app-post>
 </div>
