updated CRUD implementation

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -18,7 +18,7 @@
 </mat-card>
 
 
-<div *ngFor="let post of postList">
+<!-- <div *ngFor="let post of postList"> //zeigt alle post rudimentär an!
       <app-post [post]="post">
     </app-post>
-</div>
+</div> -->
