Title of post is now the link to open the post

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -18,8 +18,8 @@
   </mat-card>
 <div *ngFor="let post of postList">
     <div>
-        {{post.title}}  {{post.description}}
-        <p> Hallo asdlkgaslökdhgöaslk</p>
+        {{post.title}}  {{post.description}} <br>
+      <a [routerLink]="['post', post.postId]">Preview </a>
     </div>
-    <a [routerLink]="['post', post.postId]">open post</a>
+
 </div>
