Added cards to the postfeed

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -17,9 +17,8 @@
 
   </mat-card>
 <div *ngFor="let post of postList">
-    <div>
+  <mat-card>
         {{post.title}}  {{post.description}} <br>
       <a [routerLink]="['post', post.postId]">Preview </a>
-    </div>
-
+  </mat-card>
 </div>
