--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -18,7 +18,7 @@
   </mat-card>
 <div *ngFor="let post of postList">
   <mat-card>
-        {{post.title}}  {{post.description}} <br>
-      <a [routerLink]="['post', post.postId]">Preview </a>
+        {{post.title}} <span style="display: inline-block;">&nbsp;</span>  {{post.description}} <br>
+      <a [routerLink]="['post', post.postId]"> Preview </a>
   </mat-card>
 </div>
