added option to sort by date

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -22,6 +22,7 @@
   <mat-select [(ngModel)]="sortBy"(ngModelChange)="sortPosts()">
     <mat-option value="title">Title</mat-option>
     <mat-option value="id">ID</mat-option>
+    <mat-option value="recent">most recent</mat-option>
   </mat-select>
 </mat-form-field>
 <div *ngFor="let post of postList">
