--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -23,6 +23,10 @@
     <mat-option value="title">Title</mat-option>
     <mat-option value="id">ID</mat-option>
     <mat-option value="recent">most recent</mat-option>
+    <mat-option value="oldest">oldest</mat-option>
+    <mat-option value="upvotes">Upvotes</mat-option>
+    <mat-option value="downvotes">Downvotes</mat-option>
+    <mat-option value="total">Total Votes</mat-option>
   </mat-select>
 </mat-form-field>
 <div *ngFor="let post of postList">
