added functionality for updating user information

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
@@ -35,5 +35,6 @@
     <input matInput type="text" placeholder="phone number" name="phone number" [(ngModel)]="phoneNr">
   </mat-form-field>
   <br>
-  <button mat-flat-button color="primary">Update User Data</button>
+  <button mat-flat-button color="primary" (click)="updateUser(changedUser)">Update User Data</button>
+  <p>{{updateMessage}}</p>
 </mat-card>
