--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
@@ -1,10 +1,12 @@
 <mat-card>
   <h3>{{changedUser.username}}</h3>
   <mat-form-field>
-    <input matInput type="text" placeholder="User Name" name="name" [(ngModel)]="changedUser.username">
+    <input matInput type="text" placeholder="User Name" name="name" [(ngModel)]="changedUser.username" (ngModelChange)="updateUsernameMessage()">
+    <div><br>{{usernameMessage}}</div>
   </mat-form-field>
   <mat-form-field>
-    <input matInput type="email" placeholder="E-Mail" name="email" [(ngModel)]="userEmail">
+    <input matInput type="email" placeholder="E-Mail" name="email" [(ngModel)]="userEmail" (ngModelChange)="updateEmailMessage()">
+    <div><br>{{emailMessage}}</div>
   </mat-form-field>
   <br>
   <mat-form-field>
