--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -1,13 +1,4 @@
 <mat-card>
-    <!-- <mat-form-field>
-        <input matInput placeholder="Post Title" [(ngModel)]="newPostTitle" title="title">
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput placeholder="Post Description" [(ngModel)]="newPostDescription" title="description">
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput placeholder="Post Tags, comma separated" [(ngModel)]="newPostTags" title="tags">
-    </mat-form-field> -->
     <p *ngIf="loggedIn">
         <a routerLink="/home/post/-1"><button>Create Post</button></a>
     </p>
@@ -28,9 +19,19 @@
     <mat-option value="total">Total Votes</mat-option>
   </mat-select>
 </mat-form-field>
-<div *ngFor="let post of postList">
-  <mat-card>
-        {{post.title}} <span style="display: inline-block;">&nbsp;</span>  {{post.description}} <br>
-      <a [routerLink]="['post', post.postId]"> Preview </a>
-  </mat-card>
-</div>
+<mat-grid-list cols="2" rowHeight="2:1">
+  <mat-grid-tile *ngFor="let post of postList">
+
+    <!-- <mat-card> -->
+          {{post.title}} <span style="display: inline-block;">&nbsp;</span>  {{post.description}} <br>
+        <a [routerLink]="['post', post.postId]"> Preview </a>
+    <!-- </mat-card> -->
+  </mat-grid-tile>
+
+</mat-grid-list>
+<!-- <mat-grid-list cols="2" rowHeight="2:1">
+  <mat-grid-tile>1</mat-grid-tile>
+  <mat-grid-tile>2</mat-grid-tile>
+  <mat-grid-tile>3</mat-grid-tile>
+  <mat-grid-tile>4</mat-grid-tile>
+</mat-grid-list> -->
