--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -32,9 +32,13 @@
   <mat-grid-tile *ngFor="let post of postList">
 
     <!-- <mat-card> -->
-          {{post.title}} <span style="display: inline-block;">&nbsp;</span>  {{post.description}} <br>
-        <a [routerLink]="['post', post.postId]"> Preview </a>
+    <div>
+          {{post.title}} <span style="display: inline-block;">&nbsp;</span>
+        <a [routerLink]="['post', post.postId]"> Preview </a><br><br>
+    <mat-icon>thumb_up</mat-icon>{{post.upvotes}}<span style="margin-left: 20px"></span>
+    <mat-icon>thumb_down</mat-icon> {{post.downvotes}}
     <!-- </mat-card> -->
+    </div>
   </mat-grid-tile>
 
 </mat-grid-list>
