show own posts and liked posts in profile, added route to post component

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
@@ -40,7 +40,13 @@
   <button mat-flat-button color="primary" (click)="updateUser(changedUser)">Update User Data</button>
   <p>{{updateMessage}}</p>
 </mat-card>
+
+
 <mat-card>
-  <h2>My Posts</h2>
-  <app-my-posts></app-my-posts>
+  <mat-tab-group>
+    <mat-tab label="My Posts"><app-my-posts></app-my-posts></mat-tab>
+    <mat-tab label="Upvoted"><app-upvoted-posts></app-upvoted-posts></mat-tab>
+    <mat-tab label="Downvoted"> Content </mat-tab>
+    <mat-tab label="Commented"> Content </mat-tab>
+  </mat-tab-group>
 </mat-card>
